--- a/LAB3-4/CMakeLists.txt
+++ b/LAB3-4/CMakeLists.txt
@@ -3,5 +3,5 @@ project(LAB3_4)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES main.c MedUI.c MedUI.h MedController.c MedController.h MedDomain.c MedDomain.h MedRepository.c MedRepository.h)
+set(SOURCE_FILES main.c MedUI.c MedUI.h MedController.c MedController.h MedDomain.c MedDomain.h MedRepository.c MedRepository.h DynamicArray.h DynamicArray.c tests.h tests.c)
 add_executable(LAB3_4 ${SOURCE_FILES})
