--- a/LAB5-6/CMakeLists.txt
+++ b/LAB5-6/CMakeLists.txt
@@ -3,5 +3,5 @@ project(LAB5_6)
 
 set(CMAKE_CXX_STANDARD 11)
 
-set(SOURCE_FILES main.cpp DynamicArray.cpp DynamicArray.h)
+set(SOURCE_FILES main.cpp DynamicArray.cpp DynamicArray.h Movie.cpp Movie.h MovieRepository.cpp MovieRepository.h MovieController.cpp MovieController.h UI.cpp UI.h Tests.cpp Tests.h)
 add_executable(LAB5_6 ${SOURCE_FILES})
