Lab 12 bonus done (a graphic with movies)

--- a/LAB5-12/CMakeLists.txt
+++ b/LAB5-12/CMakeLists.txt
@@ -14,6 +14,7 @@ set(QT_DIR /Users/so/Qt5.8.0/5.8/clang_64/lib/cmake/Qt5Core/)
 set(Qt5Widgets_DIR /Users/so/Qt5.8.0/5.8/clang_64/lib/cmake/Qt5Widgets/)
 set(Qt5OpenGL_DIR /Users/so/Qt5.8.0/5.8/clang_64/lib/cmake/Qt5OpenGL/)
 set(Qt5Multimedia_DIR /Users/so/Qt5.8.0/5.8/clang_64/lib/cmake/Qt5Multimedia/)
+set(Qt5Charts_DIR /Users/so/Qt5.8.0/5.8/clang_64/lib/cmake/Qt5Charts/)
 
 set (CMAKE_INSTALL_PREFIX /Users/so/Qt5.8.0/5.8/clang_64/lib/cmake/Qt5Core)
 set(CMAKE_PREFIX_PATH  /Users/so/Qt5.8.0/5.8/clang_64/lib/cmake/Qt5Core)
@@ -23,10 +24,11 @@ find_package( Qt5Widgets REQUIRED )
 find_package( Qt5Gui REQUIRED )
 find_package( Qt5OpenGL REQUIRED )
 find_package( Qt5Multimedia REQUIRED )
+find_package( Qt5Charts REQUIRED )
 
 
 
-target_link_libraries(LAB5_6 Qt5::Core Qt5::Widgets Qt5::Gui)
+target_link_libraries(LAB5_6 Qt5::Core Qt5::Widgets Qt5::Gui Qt5::Charts)
 
 # Qt5 -- END SECTION --
 
